--- a/install
+++ b/install
@@ -3,9 +3,12 @@
 script_name='dmenu-editor-history'
 install_dir='/usr/local/bin'
 
+if ! [ -d $install_dir ]; then
+    echo "Installation directory $install_dir not found!" && exit 1
+fi
+
 case $1 in
     '') cp "./$script_name" "$install_dir" ;;
     uninstall) rm "$install_dir/$script_name" ;;
-    *) echo 'Invalid argument' && exit 1
+    *) echo 'Invalid argument!' && exit 1
 esac
-
